--- a/main.ipynb
+++ b/main.ipynb
@@ -281,7 +281,7 @@
    ],
    "source": [
     "cols_to_remove = [\n",
-    "     'Graphics Quality',     \n",
+    "    'Graphics Quality',     \n",
     "    'Soundtrack Quality',\n",
     "    'Story Quality',\n",
     "    'User Review Text',      \n",
@@ -293,10 +293,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e4c977-2362-4035-9092-c1f7d5e8185f",
+   "id": "c4359d53-3822-4c22-a7bd-ba9b7b21996d",
    "metadata": {},
    "source": [
-    "### Remover linha com dados nulos"
+    "- Remover colunas irrelevantes"
    ]
   },
   {
@@ -552,7 +552,7 @@
    "id": "fa52404e-a61d-4bb4-acc6-ba968f5a57a0",
    "metadata": {},
    "source": [
-    "### Remover linhas duplicadas"
+    "- Remover linhas duplicadas"
    ]
   },
   {
@@ -801,14 +801,6 @@
     "print(f\"Linhas antes: {before} | depois: {after}\")\n",
     "df.head(8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4789685-aa0f-4e7d-b401-92a45fa5da5c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
