--- a/main.ipynb
+++ b/main.ipynb
@@ -264,7 +264,7 @@
    "id": "c4359d53-3822-4c22-a7bd-ba9b7b21996d",
    "metadata": {},
    "source": [
-    "- Remover colunas irrelevantes"
+    "- Remover linhas com dados nulos"
    ]
   },
   {
